# openclaw

crewai-orchestrator/: .env.example  README.md  pyproject.toml
crewai-orchestrator/src/aljamri_crew/: __init__.py  exa_client.py  main.py  orchestration.py  telegram_bridge.py
